--- a/src/app/examples/examples.component.html
+++ b/src/app/examples/examples.component.html
@@ -132,7 +132,7 @@
   <mat-divider></mat-divider>
   <mat-form-field>
     <mat-label>Choose a date</mat-label>
-    <input matInput [matDatepicker]="picker">
+    <input matInput [matDatepicker]="picker" (dateChange)="dateChange('change', $event)" >
     <mat-hint>MM/DD/YYYY</mat-hint>
     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
